--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -24,10 +24,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv">
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:icon="@drawable/outline_clear_24"
+            app:strokeColor="#80AC92"
+            app:strokeWidth="3dp"
+            android:textColor="#6FB1A8"
+            app:iconTint="#353C31"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:text="Animate" />
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/text"
@@ -38,14 +44,7 @@
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/edit_setting_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="please enter text"
-        app:layout_constraintEnd_toEndOf="@+id/tv"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/transition_container" />
+
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
         android:layout_width="wrap_content"
