--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="AppTheme.Splash" parent="Theme.ApplicForLess4">
+    <item name="android:windowBackground">@drawable/winnt</item>
+        
+    </style>
 </resources>
